booking and carta changes 	modified:   components/booking/Booking.jsx 	modified:   components/booking/BookingFinished.jsx 	modified:   components/carta/Carta.jsx 	modified:   components/carta/CategoriesNav.jsx 	modified:   components/global.js 	modified:   package-lock.json 	modified:   package.json 	modified:   pages/_app.js 	modified:   pages/api/dbconfig2.js 	modified:   pages/api/email.js 	modified:   styles/Categories.module.css 	modified:   styles/CategoriesNav.module.css 	modified:   yarn.lock

--- a/styles/CategoriesNav.module.css
+++ b/styles/CategoriesNav.module.css
@@ -1,12 +1,16 @@
 .nav {
-  width: 100vw;
+  width: 90%;
   font-size: 1em;
   padding: 20px 10px;
   cursor: pointer;
   position: fixed;
   top: 75px;
+  left: 5%;
   background: var(--bgcolor);
   z-index: 2;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
 
 .scroll {
@@ -15,8 +19,10 @@
   justify-content: flex-start;
   flex-wrap: nowrap;
   overflow-x: auto;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .scroll::-webkit-scrollbar {
