--- a/styles/Categories.module.css
+++ b/styles/Categories.module.css
@@ -5,6 +5,7 @@
 
   padding: 20px 20px;
 }
+
 .title {
   font-size: 2em;
   text-align: left;
@@ -17,7 +18,8 @@
   display: inline-flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: left;
+  /* justify-content: left; */
+  place-content: center;
   gap: 1em;
 }
 
